--- a/style.css
+++ b/style.css
@@ -1,260 +1,263 @@
-/* Google Font Link */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600&family=Yanone+Kaffeesatz:wght@200;300;400;500;600&display=swap');
+
+:root {
+  --nav-main-font: "Belanosima";
+  --nav-secondary-font: "Kanit";
+  --p-font-family: "Roboto Mono";
+  --li--font-family: "Kosugi Maru";
+}
+
 *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins" , sans-serif;
-}
-.sidebar{
-  position: fixed;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 78px;
-  background: #11101D;
-  padding: 6px 14px;
-  z-index: 99;
-  transition: all 0.5s ease;
-}
-.sidebar.open{
-  width: 250px;
-}
-.sidebar .logo-details{
-  height: 60px;
-  display: flex;
-  align-items: center;
-  position: relative;
-}
-.sidebar .logo-details .icon{
-  opacity: 0;
-  transition: all 0.5s ease;
-}
-.sidebar .logo-details .logo_name{
-  color: #fff;
-  font-size: 20px;
-  font-weight: 600;
-  opacity: 0;
-  transition: all 0.5s ease;
-}
-.sidebar.open .logo-details .icon,
-.sidebar.open .logo-details .logo_name{
-  opacity: 1;
-}
-.sidebar .logo-details #btn{
-  position: absolute;
-  top: 50%;
-  right: 0;
-  transform: translateY(-50%);
-  font-size: 22px;
-  transition: all 0.4s ease;
-  font-size: 23px;
-  text-align: center;
-  cursor: pointer;
-  transition: all 0.5s ease;
-}
-.sidebar.open .logo-details #btn{
-  text-align: right;
-}
-.sidebar i{
-  color: #fff;
-  height: 60px;
-  min-width: 50px;
-  font-size: 28px;
-  text-align: center;
-  line-height: 60px;
-}
-.sidebar .nav-list{
-  margin-top: 20px;
-  height: 100%;
-}
-.sidebar li{
-  position: relative;
-  margin: 8px 0;
-  list-style: none;
-}
-.sidebar li .tooltip{
-  position: absolute;
-  top: -20px;
-  left: calc(100% + 15px);
-  z-index: 3;
-  background: #fff;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-  padding: 6px 12px;
-  border-radius: 4px;
-  font-size: 15px;
-  font-weight: 400;
-  opacity: 0;
-  white-space: nowrap;
-  pointer-events: none;
-  transition: 0s;
-}
-.sidebar li:hover .tooltip{
-  opacity: 1;
-  pointer-events: auto;
-  transition: all 0.4s ease;
-  top: 50%;
-  transform: translateY(-50%);
-}
-.sidebar.open li .tooltip{
-  display: none;
-}
-.sidebar input{
-  font-size: 15px;
-  color: #FFF;
-  font-weight: 400;
-  outline: none;
-  height: 50px;
-  width: 100%;
-  width: 50px;
-  border: none;
-  border-radius: 12px;
-  transition: all 0.5s ease;
-  background: #1d1b31;
-}
-.sidebar.open input{
-  padding: 0 20px 0 50px;
-  width: 100%;
-}
-.sidebar .bx-search{
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  font-size: 22px;
-  background: #1d1b31;
-  color: #FFF;
-}
-.sidebar.open .bx-search:hover{
-  background: #1d1b31;
-  color: #FFF;
-}
-.sidebar .bx-search:hover{
-  background: #FFF;
-  color: #11101d;
-}
-.sidebar li a{
-  display: flex;
-  height: 100%;
-  width: 100%;
-  border-radius: 12px;
-  align-items: center;
-  text-decoration: none;
-  transition: all 0.4s ease;
-  background: #11101D;
-}
-.sidebar li a:hover{
-  background: #FFF;
-}
-.sidebar li a .links_name{
-  color: #fff;
-  font-size: 15px;
-  font-weight: 400;
-  white-space: nowrap;
-  opacity: 0;
-  pointer-events: none;
-  transition: 0.4s;
-}
-.sidebar.open li a .links_name{
-  opacity: 1;
-  pointer-events: auto;
-}
-.sidebar li a:hover .links_name,
-.sidebar li a:hover i{
-  transition: all 0.5s ease;
-  color: #11101D;
-}
-.sidebar li i{
-  height: 50px;
-  line-height: 50px;
-  font-size: 18px;
-  border-radius: 12px;
-}
-.sidebar li.profile{
-  position: fixed;
-  height: 60px;
-  width: 78px;
-  left: 0;
-  bottom: -8px;
-  padding: 10px 14px;
-  background: #1d1b31;
-  transition: all 0.5s ease;
-  overflow: hidden;
-}
-.sidebar.open li.profile{
-  width: 250px;
-}
-.sidebar li .profile-details{
-  display: flex;
-  align-items: center;
-  flex-wrap: nowrap;
-}
-.sidebar li img{
-  height: 45px;
-  width: 45px;
-  object-fit: cover;
-  border-radius: 6px;
-  margin-right: 10px;
-}
-.sidebar li.profile .name,
-.sidebar li.profile .job{
-  font-size: 15px;
-  font-weight: 400;
-  color: #fff;
-  white-space: nowrap;
-}
-.sidebar li.profile .job{
-  font-size: 12px;
-}
-.sidebar .profile #log_out{
-  position: absolute;
-  top: 50%;
-  right: 0;
-  transform: translateY(-50%);
-  background: #1d1b31;
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
-  border-radius: 0px;
-  transition: all 0.5s ease;
-}
-.sidebar.open .profile #log_out{
-  width: 50px;
-  background: none;
-}
-.home-section{
-  position: relative;
-  background: #E4E9F7;
-  background-color: #f4f4f4;
-  min-height: 100vh;
-  top: 0;
-  left: 78px;
-  width: calc(100% - 78px);
-  transition: all 0.5s ease;
-  z-index: 2;
-}
-.sidebar.open ~ .home-section{
-  left: 250px;
-  width: calc(100% - 250px);
-}
-.home-section .text{
-  display: inline-block;
-  color: #11101d;
-  font-size: 25px;
-  font-weight: 500;
-  margin: 18px;
-  font-family: 'Poppin', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Karla', sans-serif;
 }
 
-@media (max-width: 420px) {
-  .sidebar li .tooltip{
-    display: none;
-  
+  /*--------------------------*/
+ /*   PAGE  TRANSITION       */
+/*--------------------------*/
+body{
+  color: #fff;
+  animation: transitionIn 0.75s;
+}
+
+@keyframes transitionIn {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
+  /*--------------------------*/
+ /*   END   TRANSITION       */
+/*--------------------------*/
+
+footer {
+  width: 100%;
+  height: 30px;
+  background: #57BB8A;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+}
+footer p {
+  margin-top: 5px;
+  color: black;
+  font-size: 15px;
+  font-family: var(--nav-secondary-font);
+  text-align: center;
+}
+
+.container{
+  width: 100%;
+  height: 100vh;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5),
+  rgba(0, 0, 0, 0.5)), url(./image/bg_color.jpg);
+  background-position: center;
+  background-size: cover;
+  padding-top: 35px;
+  padding-left: 8%;
+  padding-right: 8%;
+}
+nav{
+  padding: 10px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.logo a{
+  font-size: 20px;
+  text-decoration: none;
+  font-family: var(--nav-main-font);
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
+}
+span{
+  color: #57BB8A;
+  font-family: var(--nav-main-font);
+}
+nav ul li{
+  display: inline-block;
+  list-style: none;
+  margin: 10px 15px;
+}
+nav ul li a{
+  text-decoration: none;
+  color: #fff;
+  font-size: 21px;
+  font-weight: 500;
+  font-family: var(--nav-main-font);
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 1);
+  padding: 5px 10px;
+  border-radius: 15px;
+  transition: all 0.3s ease;
+}
+nav ul li a:hover{
+  background: #57BB8A;
+  color: black;
+  text-shadow: 1px 1px 1px rgba(255, 255, 255, 1);
+}
+
+.btn{
+  background: #000;
+  border-radius: 6px;
+  padding: 9px 25px;
+  text-decoration: none;
+  transition: 0.5s;
+  font-size: 18px;
+}
+
+.content{
+  margin-top: 5%;
+  max-width: 500px;
+  float: right;
+  text-align: center;
+  line-height: 45px;
+  justify-content: center;
+  margin-right: 50px;
+}
+.content h1{
+  font-size: 60px;
+  color: #57BB8A;
+  font-family: var(--nav-secondary-font);
+}
+.content h3{
+  font-size: 30px;
+  color: #57BB8A;
+  font-family: var(--nav-secondary-font);
+}
+.content p{
+  font-size: 20px;
+  font-family: var(--nav-secondary-font);
+  margin-top: 10px;
+  line-height: 30px;
+  text-align: justify;
+  color: #57BB8A;
+}
+.content img {
+  width: 300px;
+  height: auto;
+}
+a{
+  color: #ffffff;
+}
+.link {
+  margin-top: 30px;
+  
+}
+.btns {
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+.btns button {
+  height: 45px;
+  width: 140px;
+  border-radius: 30px;
+  border: none;
+  margin: 0 10px;
+  border: 2px solid #57BB8A;
+  font-size: 22px;
+  font-weight: 500;
+  font-family: var(--nav-main);
+  padding: 0 10px;
+  cursor: pointer;
+  outline: none;
+  transition: all 0.3s ease;
+}
+.btns button:first-child {
+  color: #57BB8A;
+  background: none;
+  font-family: var(--nav-main-font);
+}
+.btns button:first-child:hover {
+  background: #57BB8A;
+  color: black;
+}
 
 
+  /*----------------------------------*/
+ /*-----------MEDIA QUERIES----------*/
+/*----------------------------------*/
 
+@media only screen and (max-width: 414px) {
+  .container{
+    width: 100%;
+    height: 100vh;
+    padding-top: 10px;
+    padding-left: 6%;
+    padding-right: 4%;
+  }
+  footer p {
+    font-size: 11px;
+  }
 
+  /* -- NAV -- */
+  nav ul li a{
+    font-size: 12px;
+    padding: 0 2px;
+    padding: 5px 5px 5px 5px;
+    border-radius: 5px;
+  }
+  .logo a{
+    font-size: 15px;
+  }
+  nav ul li{
+    display: inline-block;
+    list-style: none;
+    margin: 2px 2px;
+  }
+   /* -- End of NAV -- */
 
+  /* -- Content -- */
+  .content{
+    margin-top: 6%;
+    margin-left: 5%;
+    max-width: 700px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
+  .content img {
+    margin-top: 20px;
+    width: 150px;
+    height: auto;
+  }
+  .content h1{
+    font-size: 40px;
+    color: #57BB8A;
+    font-family: var(--nav-secondary-font);
+  }
+  .content h3{
+    font-size: 20px;
+    color: #57BB8A;
+    font-family: var(--nav-secondary-font);
+  }
+  .content p{
+    font-size: 15px;
+    width: 300px;
+    font-family: var(--nav-secondary-font);
+    margin-top: 10px;
+    line-height: 20px;
+    text-align: justify;
+    color: #57BB8A;
+  }
+/* -- End of Content -- */
+
+/* -- Buttons -- */
+.btns button {
+  height: 35px;
+  width: 100px;
+}
+.btns button:first-child {
+  margin-top: 10px;
+  font-size: 14px;
+}
+
+}
 
